--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,35 @@
 body{
-  background-color: black;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100vw;
+}
+
+.about_section{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  background: linear-gradient(177deg, rgb(45, 39, 212) 75%, rgba(0,212,255,0) 76%);
+
+}
+.profile_img{
+  width: 20vw;
+  height: 20vw;
+}
+.about_wrapper{
+  display: flex;
+}
+h1{
+  font-size: 4vw;
+  width: 30vw;
+}
+.about_box{
+  width: 70vw;
+  max-width: 700px;
+}
+.icon{
+  height: 30px;
+  color: black;
 }
