--- a/src/styles.css
+++ b/src/styles.css
@@ -15,21 +15,51 @@ body{
 
 }
 .profile_img{
-  width: 20vw;
-  height: 20vw;
+  width: 25vw;
+  height: 25vw;
+  min-width: 300px;
+  min-height: 300px;
 }
 .about_wrapper{
   display: flex;
+  align-items: center;
+  margin-top: 20px;
 }
 h1{
   font-size: 4vw;
   width: 30vw;
+  margin: 0;
 }
 .about_box{
   width: 70vw;
-  max-width: 700px;
+  box-sizing: border-box;
+  max-width: 550px;
+  padding: 30px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
 }
 .icon{
   height: 30px;
   color: black;
+}
+p{
+  color: grey;
+}
+.profile_img, .about_box{
+  box-shadow: 5px 5px 100px 2px rgba(0,0,0,.8);
+}
+.logos{
+  align-self: flex-end;
+  display: flex;
+  gap: 15px;
+}
+.name{
+  position: absolute;
+  /* align-self: flex-end; */
+  color: white;
+  text-shadow: 5px 5px #0057ad;
+  width: 25vw;
+  text-align: center;
+  font-size: 3vw;
 }
