--- a/src/styles.css
+++ b/src/styles.css
@@ -89,7 +89,8 @@ header{
 .project{
   width: 300px;
   height: 350px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  box-shadow: 2px 2px 10px 2px rgba(71, 68, 68, 0.8);
 }
 .list_of_work{
   margin-top: 50px;
@@ -97,4 +98,50 @@ header{
   flex-wrap: wrap;
   justify-content: center;
   gap: 50px;
+}
+
+.project_img{
+  width: 300px;
+  height: 60%;
+  background-size: cover;
+  background-position: center;
+}
+.project_wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px 0px 10px;
+  height: 10%;
+}
+h3{
+  margin: 0;
+}
+.project_links{
+  display: flex;
+  gap: 10px;
+}
+.project_des{
+  margin: 0;
+  padding: 10px 10px 0px 10px;
+  height: 30%;
+  display: flex;
+  /* align-items: center; */
+}
+.weather-app{
+   background-image: url(/img/screenshots/weather-app.PNG);
+}
+.battlefield{
+  background-image: url(/img/screenshots/battlefield.PNG);
+}
+.calculator{
+  background-image: url(/img/screenshots/calculator.PNG);
+}
+.todo{
+  background-image: url(/img/screenshots/todo.PNG);
+}
+.library{
+  background-image: url(/img/screenshots/library.PNG);
+}
+.tictactoe{
+  background-image: url(/img/screenshots/tictactoe.PNG);
 }
