--- a/src/styles.css
+++ b/src/styles.css
@@ -66,7 +66,7 @@ p{
   /* align-self: flex-end; */
   color: white;
   text-shadow: 5px 5px #0057ad;
-  width: 25vw;
+  /* width: 25vw; */
   text-align: center;
   font-size: 3vw;
 }
@@ -89,9 +89,15 @@ header{
 .project{
   width: 300px;
   height: 350px;
-  /* border: 1px solid black; */
+  border-radius: 5px;
+  overflow: hidden;
   box-shadow: 2px 2px 10px 2px rgba(71, 68, 68, 0.8);
+  transition: transform 0.3s ease-in-out;
 }
+.project:hover{
+  transform: scale(1.2);
+}
+
 .list_of_work{
   margin-top: 50px;
   display: flex;
@@ -183,3 +189,30 @@ h4, .message{
   background-image: url(/img/profile.jpg);
 }
 
+@media (max-width: 880px) {
+  .about_wrapper{
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 600px){
+  .contactme_section{
+    flex-direction: column;
+  }
+  .footer_photo{
+    width: 100vw;
+  }
+  .contactme_section{
+    align-items: center;
+    padding-bottom: 0;
+  }
+  .contact_me{
+    width: 70vw;
+  }
+  h4, .message{
+    font-size: 15px;
+  }
+  .name{
+    font-size: 30px;
+  }
+}
