--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body{
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Playfair Display', serif;
   width: 100vw;
   overflow-x: hidden;
 }
@@ -50,7 +50,18 @@ h1{
 }
 .icon{
   height: 30px;
+  width: 30px;
+  background-size: contain;
   color: black;
+}
+.open{
+  background-image: url(/src/icons/open-in-new.svg);
+}
+.email_logo{
+  background-image: url(/src/icons/email-outline.svg);
+}
+.phone_logo{
+  background-image: url(/src/icons/phone.svg);
 }
 p{
   color: grey;
