made some additions to projects

--- a/src/styles.css
+++ b/src/styles.css
@@ -162,6 +162,9 @@ h3{
 .tictactoe{
   background-image: url(/img/screenshots/tictactoe.PNG);
 }
+.cv-app{
+  background-image: url(/img/screenshots/cv-app.PNG);
+}
 
 .contactme_section{
   margin-top: 100px;
